# dev-toolsbox

./: .gitignore  AGENTS.md  README.md  app.pen  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: release.yml
.opencode/plans/: landing-page.md  rename-to-dext.md
docs/: adding-tools.md  architecture.md  design-system.md  index.html  install.sh  style.css
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: database_manager.rs  dns_lookup.rs  docker_manager.rs  log_watcher.rs  mod.rs  openvpn_manager.rs  port_scanner.rs  ssl_inspector.rs
src/components/layout/: layout.module.css  layout.tsx  sidebar.module.css  sidebar.tsx  tool-container.module.css  tool-container.tsx
src/components/shared/: action-button.module.css  action-button.tsx  copy-button.module.css  copy-button.tsx  (+8 more)
src/hooks/: use-clipboard.ts  use-history.ts
src/services/: base64.service.ts  color-converter.service.ts  curl-converter.service.ts  dns-lookup.service.ts  docker-dashboard.service.ts  env-manager.service.ts  http-runner.service.ts  json-diff.service.ts  json-to-typescript.service.ts  jwt.service.ts  log-tail-viewer.service.ts  markdown-preview.service.ts  mock-generator.service.ts  openvpn-manager.service.ts  port-scanner.service.ts  secret-generator.service.ts  ssl-inspector.service.ts  storage.service.ts  uuid.service.ts  websocket-tester.service.ts
src/styles/: global.css
src/types/: index.ts
(+39 files in other folders)
