[package]
name = "dev-toolsbox"
version = "1.0.0"
description = "A collection of essential local developer tools"
authors = ["dev-toolsbox"]
edition = "2021"

[lib]
name = "dev_toolsbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
